--- a/views/layout/default.twig
+++ b/views/layout/default.twig
@@ -4,13 +4,13 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bootstrap 101 Template</title>
+	<title>{{ manifest.projectName }}</title>
 	<link href="{{ app.request.basePath ~ '/bower_components/bootstrap/dist/css/bootstrap.min.css' }}" rel="stylesheet">
 	<link href="{{ app.request.basePath ~ '/bower_components/flat-ui/dist/css/flat-ui.min.css' }}" rel="stylesheet">
 	<script src="{{ app.request.basePath ~ '/bower_components/jquery/dist/jquery.min.js' }}"></script>
     <!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<script src="{{ app.request.basePath ~ '/bower_components/html5shiv/dist/html5shiv.min.js' }}"></script>
+	<script src="{{ app.request.basePath ~ '/bower_components/respond/dest/respond.min.js' }}"></script>
 	<![endif]-->
 	<style>
 	.container.content {
