--- a/views/layout/default.twig
+++ b/views/layout/default.twig
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{{ manifest.projectName }}</title>
+	<title>{{ manifest.projectName|default('Breview') }}</title>
 	<link href="{{ app.request.basePath ~ '/bower_components/bootstrap/dist/css/bootstrap.min.css' }}" rel="stylesheet">
 	<link href="{{ app.request.basePath ~ '/bower_components/flat-ui/dist/css/flat-ui.min.css' }}" rel="stylesheet">
 	<script src="{{ app.request.basePath ~ '/bower_components/jquery/dist/jquery.min.js' }}"></script>
@@ -28,7 +28,11 @@
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
 					<span class="sr-only">Toggle navigation</span>
 				</button>
-				<a class="navbar-brand" href="{{ url('home') }}">{{ manifest.projectName }}</a>
+				{% if manifestID %}
+				<a class="navbar-brand" href="{{ url('manifest', {'manifest': manifestID}) }}">{{ manifest.projectName }}</a>
+				{% else %}
+				<a class="navbar-brand" href="{{ url('home') }}">Breview</a>
+				{% endif %}
 			</div>
 			<div class="navbar-collapse collapse">
 				{#
