--- a/views/partial/embeds.twig
+++ b/views/partial/embeds.twig
@@ -1,19 +1,21 @@
 {% macro flash(asset) %}
-<div id="flash-content">
+{% set containerID = 'flash-content-' ~ random(1024) %}
+<div id="{{ containerID }}">
 	<p>Please wait, while we open your file.</p>
 </div>
 <script type="text/javascript">
 $(document).ready(function() {
 	swfobject.embedSWF(
 		"{{ asset.path }}",
-		"flash-content",
-		"{{ asset.width }}",
-		"{{ asset.height }}",
+		"{{ containerID }}",
+		"{{ asset.width.getValue }}",
+		"{{ asset.height.getValue }}",
 		"9.0.0"
 	);
 });
 </script>
 {% endmacro %}
+
 {% macro image(asset) %}
 <img src="{{ asset.path }}" alt="Preview"/>
 {% endmacro %}
