--- a/views/layout/default.twig
+++ b/views/layout/default.twig
@@ -19,55 +19,51 @@
 	.keys.list {
 		font-size: .8em;
 	}
-	.navbar {
-		border-radius: 0;
-	}
 	</style>
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-inverse" role="navigation">
-		<div class="container-fluid">
-			{% if manifestID is defined %}
+	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
 			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+				</button>
+				{% if manifestID %}
 				<a class="navbar-brand" href="{{ url('manifest', {'manifest': manifestID}) }}">{{ manifest.projectName }}</a>
-			</div>
-			<ul class="nav navbar-nav navbar-right">
-				<li>
-					<a href="{{ url('manifest', {'manifest': manifestID}) }}">
-						<i class="glyphicon glyphicon-home"></i>
-						Home
-					</a>
-				</li>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-						<i class="glyphicon glyphicon-th-list"></i>
-						Browse
-						<span class="caret"></span>
-					</a>
-					<ul class="dropdown-menu" role="menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-						<i class="glyphicon glyphicon-download"></i>
-						Download
-					</a>
-				</li>
-			</ul>
-			{% else %}
-			<div class="navbar-header">
+				{% else %}
 				<a class="navbar-brand" href="{{ url('home') }}">Breview</a>
+				{% endif %}
 			</div>
-			{% endif %}
+			<div class="navbar-collapse collapse">
+				{#
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a href="../navbar-static-top/">
+							<i class="glyphicon glyphicon-home"></i>
+							Home
+						</a>
+					</li>
+					<li>
+						<a href="../navbar-static-top/">
+							<i class="glyphicon glyphicon-th-list"></i>
+							List of Banners
+						</a>
+					</li>
+					<li class="active">
+						<a href="./">
+							<i class="glyphicon glyphicon-download"></i>
+							Download
+						</a>
+					</li>
+				</ul>
+				#}
+			</div>
 		</div>
-	</nav>
-	<div class="container-fluid">
+	</div>
+	<div class="container content">
 	{% block content %}{% endblock %}
 	</div>
-	<footer></footer>
+	<script src="{{ app.request.basePath ~ '/bower_components/bootstrap/dist/js/bootstrap.min.js' }}"></script>
 	<script src="{{ app.request.basePath ~ '/bower_components/flat-ui/dist/js/flat-ui.min.js' }}"></script>
 	<script src="{{ app.request.basePath ~ '/bower_components/swfobject/swfobject/swfobject.js' }}"></script>
 </body>
