--- a/views/manifest.twig
+++ b/views/manifest.twig
@@ -1,21 +1,21 @@
 {% extends 'layout/default.twig' %}
 {% block content %}
-<div>
+<div class="center-block col-md-14">
 	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th class="col-md-6">Title</th>
 				{% for a in manifest.attributes %}
-				<th class="col-md-1">{{ a|attributeTitle|default('-') }}</th>
+				<th class="col-md-1">{{ a|title }}</th>
 				{% endfor %}
 			</tr>
 		</thead>
 		<tbody>
 			{% for i in manifest.items %}
 			<tr>
-				<td><a href="{{ url('preview', {'manifest': manifestID, 'item': i.title|hash }) }}">{{ i.title }}</a> <span class="badge">{{ i.assets|length }}</span></td>
+				<td><a href="{{ url('preview', {'manifest': 1234, 'item': i.title|hash }) }}">{{ i.title }}</a></td>
 				{% for a in manifest.attributes %}
-				<td>{{ i.getAttribute(a)|default('-') }}</td>
+				<td>{{ i.getAttribute(a)|title|default('-') }}</td>
 				{% endfor %}
 	  		</tr>
 	  		{% endfor %}
