--- a/views/partial/previews.twig
+++ b/views/partial/previews.twig
@@ -1,21 +1,19 @@
 {% macro flash(asset) %}
-{% set containerID = 'flash-content-' ~ random(1024) %}
-<div id="{{ containerID }}">
+<div id="flash-content">
 	<p>Please wait, while we open your file.</p>
 </div>
 <script type="text/javascript">
 $(document).ready(function() {
 	swfobject.embedSWF(
 		"{{ asset.path }}",
-		"{{ containerID }}",
-		"{{ asset.width.getValue }}",
-		"{{ asset.height.getValue }}",
+		"flash-content",
+		"{{ asset.width }}",
+		"{{ asset.height }}",
 		"9.0.0"
 	);
 });
 </script>
 {% endmacro %}
-
 {% macro image(asset) %}
 <img src="{{ asset.path }}" alt="Preview"/>
 {% endmacro %}
