--- a/views/preview.twig
+++ b/views/preview.twig
@@ -12,7 +12,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h6>{{ item.title }}</h6>
-			{{ attribute(embeds, item.getAttribute('type'), [a]) }}
+			{{ attribute(embeds, item.getAttribute('type').getValue, [a]) }}
 		</div>
 	</div>
 	{% if not loop.last %}<hr/>{% endif %}
