Added homepage, fixed the dropdown in header.

--- a/views/index.twig
+++ b/views/index.twig
@@ -1,2 +1,6 @@
 {% extends 'layout/default.twig' %}
-{% block content %}{% endblock %}
+{% block content %}
+<div>
+	{{ readme|markdown }}
+</div>
+{% endblock %}
