--- a/views/layout/default.twig
+++ b/views/layout/default.twig
@@ -45,17 +45,34 @@
 						<span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
+						{% for i in manifest.items %}
+						<li><a href="{{ url('preview', {'manifest': manifestID, 'item': i.title|hash }) }}">{{ i.title }}</a></li>
+						{% endfor %}
 					</ul>
 				</li>
+				{% if manifest.attachments|length > 0 %}
+				{% if manifest.attachments|length == 1 %}
 				<li>
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-						<i class="glyphicon glyphicon-download"></i>
-						Download
+					<a href="{{ manifest.attachments[0].path }}">
+						<i class="glyphicon glyphicon-paperclip"></i>
+						Attachment
 					</a>
 				</li>
+				{% else %}
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						<i class="glyphicon glyphicon-paperclip"></i>
+						Attachments
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu" role="menu">
+						{% for i in manifest.attachments %}
+						<li><a href="{{ i.path }}">{{ i.title }}</a></li>
+						{% endfor %}
+					</ul>
+				</li>
+				{% endif %}
+				{% endif %}
 			</ul>
 			{% else %}
 			<div class="navbar-header">
