--- a/views/manifest.twig
+++ b/views/manifest.twig
@@ -13,7 +13,7 @@
 		<tbody>
 			{% for i in manifest.items %}
 			<tr>
-				<td><a href="{{ url('preview', {'manifest': manifestID, 'item': i.title|hash }) }}">{{ i.title }}</a> <span class="badge">{{ i.assets|length }}</span></td>
+				<td><a href="{{ url('preview', {'manifest': manifestID, 'item': i.title|hash }) }}">{{ i.title }}</a></td>
 				{% for a in manifest.attributes %}
 				<td>{{ i.getAttribute(a)|default('-') }}</td>
 				{% endfor %}
