Added new type for previews
“iframe” type added for viewing html5 banners

--- a/views/partial/embeds.twig
+++ b/views/partial/embeds.twig
@@ -19,3 +19,7 @@ $(document).ready(function() {
 {% macro image(asset) %}
 <img src="{{ asset.path }}" alt="Preview"/>
 {% endmacro %}
+
+{% macro iframe(asset) %}
+<iframe src="{{ asset.path }}" width="{{ asset.width.getValue }}" height="{{ asset.height.getValue }}"/>
+{% endmacro %}
